Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.6.0 FF
-
-
54200de40 (dev), d2de421e7 (6.6)
Description
Install Qt 6.6.0 macOS binaries, configure example demos/documentviewer:
6.6.0/macos/bin/qt-cmake -S /Users/qt/RTA/Qt_6.6.0/Examples/Qt-6.6.0/demos/documentviewer -B /Users/qt/RTA/Qt_6.6.0/Examples/Qt-6.6.0/demos/documentviewer/bld_macos -GNinja
Run cmake --build . --parallel -j 8 in /Users/qt/RTA/Qt_6.6.0/Examples/Qt-6.6.0/demos/documentviewer/bld_macos, fails:
[1/17] Building CXX object plugins/txtviewer/CMakeFiles/txtviewer.dir/__/__/app/abstractviewer.cpp.o [2/17] Building CXX object plugins/jsonviewer/CMakeFiles/jsonviewer.dir/__/__/app/abstractviewer.cpp.o [3/17] Building CXX object plugins/txtviewer/CMakeFiles/txtviewer.dir/txtviewer.cpp.o [4/17] Linking CXX shared module app/libtxtviewer.dylib FAILED: app/libtxtviewer.dylib : && /usr/bin/clang++ -isysroot /Applications/Xcode13.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.1.sdk -mmacosx-version-min=11.0 -bundle -Wl,-headerpad_max_install_names -o app/libtxtviewer.dylib plugins/txtviewer/CMakeFiles/txtviewer.dir/txtviewer.cpp.o plugins/txtviewer/CMakeFiles/txtviewer.dir/__/__/app/abstractviewer.cpp.o -F/Users/qt/RTA/Qt_6.6.0/6.6.0/macos/lib -Wl,-rpath,/Users/qt/RTA/Qt_6.6.0/6.6.0/macos/lib /Users/qt/RTA/Qt_6.6.0/6.6.0/macos/lib/QtPrintSupport.framework/Versions/A/QtPrintSupport /Users/qt/RTA/Qt_6.6.0/6.6.0/macos/lib/QtWidgets.framework/Versions/A/QtWidgets /Users/qt/RTA/Qt_6.6.0/6.6.0/macos/lib/QtGui.framework/Versions/A/QtGui /Users/qt/RTA/Qt_6.6.0/6.6.0/macos/lib/QtCore.framework/Versions/A/QtCore -framework IOKit -framework DiskArbitration -Xlinker -framework -Xlinker OpenGL -Xlinker -framework -Xlinker AGL -framework AppKit -framework ImageIO -framework Metal -framework ApplicationServices /Applications/Xcode13.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.1.sdk/usr/lib/libcups.tbd && : Undefined symbols for architecture x86_64: "AbstractViewer::showMessage(QString const&, int)", referenced from: AbstractViewer::statusMessage(QString const&, QString const&, int) in abstractviewer.cpp.o "AbstractViewer::uiInitialized()", referenced from: TxtViewer::init(QFile*, QWidget*, QMainWindow*) in txtviewer.cpp.o AbstractViewer::initViewer(QAction*, QAction*, QAction*, QTabWidget*) in abstractviewer.cpp.o "AbstractViewer::staticMetaObject", referenced from: QMetaObject::Connection QObject::connect<void (AbstractViewer::*)(), void (TxtViewer::*)()>(QtPrivate::FunctionPointer<void (AbstractViewer::*)()>::Object const*, void (AbstractViewer::*)(), QtPrivate::ContextTypeForFunctor<void (TxtViewer::*)(), void>::ContextType const*, void (TxtViewer::*&&)(), Qt::ConnectionType) in txtviewer.cpp.o AbstractViewer::tr(char const*, char const*, int) in abstractviewer.cpp.o "AbstractViewer::printingEnabledChanged(bool)", referenced from: AbstractViewer::maybeSetPrintingEnabled(bool) in abstractviewer.cpp.o "TxtViewer::staticMetaObject", referenced from: TxtViewer::tr(char const*, char const*, int) in txtviewer.cpp.o "vtable for AbstractViewer", referenced from: AbstractViewer::AbstractViewer() in abstractviewer.cpp.o AbstractViewer::~AbstractViewer() in abstractviewer.cpp.o NOTE: a missing vtable usually means the first non-inline virtual member function has no definition. ld: symbol(s) not found for architecture x86_64 clang: error: linker command failed with exit code 1 (use -v to see invocation) [5/17] Building CXX object plugins/jsonviewer/CMakeFiles/jsonviewer.dir/jsonviewer.cpp.o ninja: build stopped: subcommand failed.
Compiles fine with Qt 6.5.1 binaries.
Re-assign if the component is not correct...
Attachments
Issue Links
- resulted in
-
QTBUG-114370 documentviewer demo causes lots of warnings when building on iOS
-
- Closed
-
For Gerrit Dashboard: QTBUG-114365 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
482821,4 | Fix build of documentviewer example | dev | qt/qtdoc | Status: MERGED | +2 | 0 |
483213,2 | Fix build of documentviewer example | 6.6 | qt/qtdoc | Status: MERGED | +2 | 0 |
483214,1 | Fix build of documentviewer example | 6.5 | qt/qtdoc | Status: ABANDONED | +2 | 0 |