Fix build of documentviewer example

Due to a missing qt_standard_project_setup call, AUTOMOC was never
enabled which led to undefined symbol issues at link time.

Remove documentWasModified slot declaration because it didn't have a
definition, and it was not referenced by anything in the code.

Fixes: QTBUG-114365
Change-Id: Ib6938163be1a1fdc0bb6f4a925878ec1b309d03e
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>
(cherry picked from commit 54200de40569d420565a90e3d8318b7d784be867)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>